--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,10 @@
   font-weight: bold;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 @custom-variant dark (&:is(.dark *));
 
 @theme {
@@ -18,6 +22,22 @@
   --color-darkgray: #212120;
   --color-white: #eeeeec;
   --color-dark: #111110;
+}
+
+@theme {
+    --animate-gradient-x: gradient-x 3s ease infinite;
+    
+    @keyframes gradient-x {
+        0% {
+          background-position: 0% 50%;
+        }
+        100% {
+          background-position: 0% 50%;
+        }
+        50% {
+          background-position: 100% 50%;
+        }
+    }
 }
 
 @theme inline {
