feat: (dashboard) static kanban board

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,7 @@ html {
 
 @theme {
   --color-yellow: #ffc53d;
+  --color-darkyellow: #977225;
   --color-lightyellow: #ffe7b3;
   --color-brown: #2f1f0d;
   --color-gray: #6f6d66;
